test/resources/parser/failing/zomtest8.scala
object UnterminatedString {
  "This string has no end
  val x: Int = 1
}